# src/api/body_json_structs.rs
@@ -3,15 +3,16 @@ use serde::{Deserialize, Serialize};
 use crate::structs::BackendServer;
 
 #[derive(Debug, Clone, Serialize, Deserialize)]
-pub struct BodyServerActive {
+pub struct BodyServerEnabled {
     pub name: String,
-    pub active: bool,
+    pub enabled: bool,
 }
 
 #[derive(Debug, Clone, Serialize, Deserialize)]
 pub struct BodyBackendPost {
     pub name: String,
     pub domain: String,
+    pub antibot: bool,
     pub frontends: Vec<String>,
     pub servers: Vec<BackendServer>,
 }
